# llm_inference

./: CMakeLists.txt  a.txt
gpt2/: gpt2.h  gpt2_block.h  single_head_attention.h
include/: gpt2.h  gpt2_block.h  gpt2_tokenizer.h  model_parse.h  module.h  tensor.h  thread_pool.h  time_calc.h  tokenizer.h
include/modules/: RMS_norm.h  layer_norm.h  linear.h  multi_head_attention.h  single_head_attention.h
mnist/: mha_test_time.py  mha_train.py  mnist.h  mnist_mha.h  mnist_test.h  test_time.py  train.py
qwen3/: RoPE.py  grouped_head_attention.h  mlp.h  qwen3.h  qwen3.py  qwen3_block.h  qwen3_tokenizer.h  single_head_attention.h
src/: main.cpp  model_parse.cpp
